fix: open PDF in a new window

--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
   "author": "Julian Hundeloh",
   "license": "CC-BY-3.0",
   "homepage": "https://www.hundeloh-consulting.com/",
-  "dependencies": {}
+  "dependencies": {
+    "phantomjs": "^2.1.7"
+  }
 }
