--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "CC-BY-3.0",
   "homepage": "https://www.hundeloh-consulting.com/",
   "dependencies": {
-    "phantomjs": "^2.1.7"
+    "phantomjs": "^2.1.7",
+    "sass": "1.12.0"
   }
 }
